# uop-workspace

./: CLAUDE.md  GEMINI.md  Untitled.ipynb  pyproject.toml
.virtual_documents/: Untitled.ipynb
