[project]
name = "uop-workspace"
version = "0.1.0"
description = "Workspace for the UOP project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.13.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "jupyterlab>=4.5.0",
]

[tool.uv.workspace]
members = [
    "packages/sjasoft-utils",
    "packages/uop-app-pyside",
    "packages/uop-client",
    "packages/uop-core",
    "packages/uop-db-alchemy",
    "packages/uop-db-mongo",
    "packages/uop-db-sqlite",
    "packages/uop-meta",
    "packages/sjasoft-web",
    "packages/uop-db-neo4j",
    "packages/uop-db-postgres",
]

[tool.uv.sources]
sjasoft-utils = { workspace = true }
sjasoft-web = { workspace = true }
uop-meta = { workspace = true }
uop-core = { workspace = true }
uop-client = { workspace = true }
uop-db-alchemy = { workspace = true }
uop-db-mongo = { workspace = true }
uop-db-sqlite = { workspace = true }
uop-db-neo4j = { workspace = true }
